# entityx_python

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  PythonSystem.cc  README.md  waf  wscript
cmake/: FindEntityX.cmake
entityx/python/: PythonSystem.cc  PythonSystem.h  PythonSystem_test.cc  config.h.in
entityx/python/entityx/: __init__.py
entityx/python/entityx/tests/: update_test.py
